# realtime-agent-visualize

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml
agent/: __init__.py  backend.py  cache.py  compare_run.py  comparison.py  llm.py  models.py  orchestrator.py  run.py  sdk_backend.py
agent/skills/: __init__.py  loader.py
agent/skills/compare_office/: SKILL.md  __init__.py  render.py
agent/skills/compare_viz/: SKILL.md  __init__.py  render.py
agent/skills/event-align/: SKILL.md
agent/skills/kline_viz/: SKILL.md  __init__.py  render.py
agent/skills/office_export/: SKILL.md  __init__.py  render.py
agent/subagents/: __init__.py  event_curator.py  report_builder.py  signal_analyst.py
agent/tools/: __init__.py  _serde.py  _util.py  artifact_io.py  compare.py  detect_inflections.py  errors.py  market_data.py  news_fetch.py
agent/tools/data/: news_seed.json
agent/web/: __init__.py  __main__.py  index.html  server.py
docs/: 00-overview.md  01-conventions.md  ai-development-log.md  design-writeup.md
docs/phases/: P0-scaffolding.md  P1-data-tools.md  P2-analysis-inflection.md  P3-event-curation.md  P4-visualization-artifacts.md  P5-orchestration-testing.md  P6-live-dashboard.md  P7-multi-asset-comparison.md
examples/: harness_demo.py  live_smoke.py
samples/: NVDA_analysis.docx  NVDA_analysis.html  NVDA_analysis.pptx  NVDA_analysis.xlsx  SYN_analysis.docx  SYN_analysis.html  SYN_analysis.pptx  SYN_analysis.xlsx  gold_vs_bitcoin_comparison.docx  gold_vs_bitcoin_comparison.html  gold_vs_bitcoin_comparison.pptx  gold_vs_bitcoin_comparison.xlsx
tests/: comparison_fixtures.py  integration_fixtures.py  test_backend.py  test_cli.py  test_compare.py  test_compare_cli.py  test_comparison_pipeline.py  test_comparison_render.py  test_detect_inflections.py  test_events.py  test_integration.py  test_invariants.py  test_llm.py  test_market_data.py  test_models.py  test_news_fetch.py  test_report_builder.py  test_security.py  test_skills.py  test_web.py
tests/fixtures/: hn_algolia.json  news_sample.json  stooq_nvda.csv  synthetic_prices.json  yahoo_nvda_chart.json
tests/mocks/: llm_stub.py
tests/subagents/: test_event_curator.py  test_signal_analyst.py
