[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "realtime-agent-visualize"
version = "0.1.0"
description = "Autonomous market-data analysis agent with traceable, interactive deliverables"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []  # P0 core is stdlib-only; feature deps live in extras below

[project.optional-dependencies]
# Dev/test toolchain — enough to run the P0 test suite.
dev = ["pytest>=7.4", "ruff>=0.4", "mypy>=1.8"]
# Full data + reporting stack, wired incrementally in P1–P4.
full = [
    "yfinance>=0.2",
    "pandas>=2.0",
    "ruptures>=1.1",
    "requests>=2.31",
    "openpyxl>=3.1",
    "python-pptx>=0.6",
    "python-docx>=1.1",
]
# Agent backend (P5). Optional so the scaffold runs without a key.
sdk = ["claude-agent-sdk>=0.1", "anthropic>=0.40"]

[project.scripts]
agent-run = "agent.run:main"

[tool.setuptools.packages.find]
include = ["agent*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["agent"]

[[tool.mypy.overrides]]
module = ["requests.*", "yfinance.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
