[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "realtime-agent-visualize"
version = "0.1.0"
description = "Autonomous market-data analysis agent with traceable, interactive deliverables"
readme = "README.md"
requires-python = ">=3.11"
# Core analysis deps (the deterministic detector needs these). Network/reporting
# libraries stay in the `full` extra so tests install light.
dependencies = ["numpy>=1.26", "ruptures>=1.1"]

[project.optional-dependencies]
# Dev/test toolchain — enough to run the offline test suite.
dev = ["pytest>=7.4", "ruff>=0.4", "mypy>=1.8"]
# Live data + reporting stack, wired incrementally in P1–P4.
full = [
    "requests>=2.31",
    "openpyxl>=3.1",
    "python-pptx>=0.6",
    "python-docx>=1.1",
]
# Agent backend (P5). Optional so the scaffold runs without a key.
sdk = ["claude-agent-sdk>=0.1", "anthropic>=0.40"]

[project.scripts]
agent-run = "agent.run:main"

[tool.setuptools.packages.find]
include = ["agent*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["agent"]

[[tool.mypy.overrides]]
module = ["requests.*", "yfinance.*", "ruptures.*", "anthropic.*"]
ignore_missing_imports = true

# numpy 2.5 stubs use 3.12-only `type` syntax; don't parse them under our 3.11
# target — treat numpy as untyped rather than bump the whole project's target.
[[tool.mypy.overrides]]
module = ["numpy", "numpy.*"]
follow_imports = "skip"
follow_imports_for_stubs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
